--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+<!DOCTYPE html>
+
+<head>
+    <meta charset="utf-8">
+    <title>Redirect to personal site</title>
+</head>
+
+<body>
+    <p>
+        You will be redirected in few seconds. <br />
+        Please click <a href="https://matteocaldana.github.io/p">this link</a> if it does not work.
+    </p>
+    <script>
+        window.location.replace("https://matteocaldana.github.io/p");
+    </script>
+</body>
